# sort-it-now

./: .gitignore  QUESTIONNAIRE.md  README.md  build.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml  release.yml
src/file_wayfinder/: __init__.py  __main__.py  achievements.py  app.py  autostart.py  classifier.py  config.py  conflict_ui.py  constants.py  dashboard_ui.py  duplicate.py  history.py  ipc.py  notifications.py  prompt.py  rules.py  rules_ui.py  settings_ui.py  themes.py  tray.py  watcher.py
src/iconic_filer/: __init__.py  __main__.py  achievements.py  app.py  autostart.py  classifier.py  config.py  conflict_ui.py  constants.py  dashboard_ui.py  duplicate.py  history.py  ipc.py  manual_ui.py  notifications.py  prompt.py  rules.py  rules_ui.py  settings_ui.py  themes.py  tray.py  watcher.py
src/sort_it_now/: __init__.py  __main__.py  app.py  autostart.py  classifier.py  config.py  conflict_ui.py  constants.py  dashboard_ui.py  duplicate.py  history.py  notifications.py  prompt.py  rules.py  rules_ui.py  settings_ui.py  themes.py  tray.py  watcher.py
tests/: test_classifier.py  test_config.py  test_history.py  test_new_features.py  test_rules.py  test_watcher.py
